# pbtonplmt

fullsimple/: README.md  fullsimple.cabal  stack.yaml
fullsimple/src/: Evaluator.hs  Main.hs  Properties.hs  SimpleContext.hs  Syntax.hs  TestFeat.hs  Typing.hs
imp-stc/: imp-stc.cabal  process_timings.py  stack.yaml  test_all.sh
imp-stc/app-feat-auto/: Main.hs
imp-stc/app-lazysmallcheck-hw/: Main.hs
imp-stc/app-smallcheck-auto/: Main.hs
imp-stc/src/: Bug1.hs  Bug2.hs  Correct.hs  IMP.hs  Properties.hs  Sec.hs
imp-stc/test/: SanityCheckSpec.hs
stlc-redex/: README.md  stack.yaml  stlc-redex.cabal  test_all.sh
stlc-redex/app-feat-auto/: Main.hs
stlc-redex/app-feat-hw/: Main.hs
stlc-redex/app-lazysmallcheck-hw/: Main.hs
stlc-redex/app-quickcheck-hw/: Gen.hs  Main.hs
stlc-redex/app-smallcheck-auto/: Main.hs
stlc-redex/app-smallcheck-hw/: Main.hs
stlc-redex/src/: Bug1.hs  Bug2.hs  Bug3.hs  Bug4.hs  Bug5.hs  Bug6.hs  Bug7.hs  Bug8.hs  Bug9.hs  CorrectModel.hs  FeatUtil.hs  IncrementalEnum.hs  NaiveEnum.hs  Properties.hs  STLC.hs  SmallCheckUtil.hs
stlc-redex/test/: EnumerationSpec.hs  SanityCheckSpec.hs
stlc-unbound/: LICENSE  README.md  stack.yaml  stlc-unbound.cabal
stlc-unbound/src/: Main.hs  Properties.hs  STLC.hs  TestFeat.hs
