name:                fullsimple
version:             0.1.0.0
synopsis:            Testing of fullsimple from https://code.google.com/archive/p/tapl-haskell/
description:         Please see README.md
homepage:            https://github.com/GuglielmoS/pbtonplmt/fullsimple
license:             BSD3
license-file:        LICENSE
author:              Guglielmo Fachini
maintainer:          guglielmo@fachini.net
copyright:           2016 Guglielmo Fachini
category:            PLT
build-type:          Simple
cabal-version:       >=1.10

executable fullsimple
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -O2
  other-modules:       Evaluator
                     , SimpleContext
                     , Syntax
                     , TaplError
                     , Typing
                     , TestFeat
                     , Properties
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 0.2.1
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0
                     , testing-feat >= 0.4.0.3