name:                stlc-redex
version:             0.1.0.0
synopsis:            PLT-Redex STLC implemented in Haskell
description:         Please see README.md
homepage:            https://github.org/GuglielmoS/pbtonplmt
license:             BSD3
license-file:        LICENSE
author:              Guglielmo Fachini
maintainer:          guglielmo@fachini.net
copyright:           2016 Guglielmo Fachini
category:            PLT
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     STLC
                     , CorrectModel
                     , Bug1, Bug2, Bug3, Bug4, Bug5, Bug6, Bug7, Bug8, Bug9
                     , Properties, FeatUtil, SmallCheckUtil
                     , NaiveEnum, IncrementalEnum
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1                    
                     , smallcheck >= 1.1.1

executable stlc-redex-feat-hw
  hs-source-dirs:      app-feat-hw
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , stlc-redex
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
                     , testing-feat >= 0.4.0.3
                     , clock >= 0.7.2
  default-language:    Haskell2010

executable stlc-redex-feat-auto
  hs-source-dirs:      app-feat-auto
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , stlc-redex
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
                     , testing-feat >= 0.4.0.3
                     , clock >= 0.7.2
  default-language:    Haskell2010

executable stlc-redex-smallcheck-auto
  hs-source-dirs:      app-smallcheck-auto
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , stlc-redex
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
                     , smallcheck >= 1.1.1
                     , clock >= 0.7.2
  default-language:    Haskell2010

executable stlc-redex-smallcheck-hw
  hs-source-dirs:      app-smallcheck-hw
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , stlc-redex
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
                     , smallcheck >= 1.1.1
                     , clock >= 0.7.2
  default-language:    Haskell2010

executable stlc-redex-lazysmallcheck-hw
  hs-source-dirs:      app-lazysmallcheck-hw
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , stlc-redex
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
                     , lazysmallcheck >= 0.6
                     , clock >= 0.7.2
  default-language:    Haskell2010

executable stlc-redex-quickcheck-hw
  hs-source-dirs:      app-quickcheck-hw
  main-is:             Main.hs
  other-modules:       Gen
  ghc-options:         -Wall -O2
  build-depends:       base
                     , stlc-redex
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
                     , QuickCheck >= 2.8.2
                     , QuickCheck-GenT >= 0.2.0
                     , clock >= 0.7.2
  default-language:    Haskell2010

test-suite stlc-redex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  other-modules:       SanityCheckSpec
                     , EnumerationSpec
  build-depends:       QuickCheck >= 2.8.2
                     , base >= 4.7 && < 5
                     , stlc-redex
                     , hspec
                     , containers >= 0.5.6.2
                     , mtl >= 0.2.1
                     , unbound >= 0.5.1
